# lumera-agent-memory

./: .editorconfig  .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md
.github/workflows/: main.yml  (+1 more)
000-docs/: 002-AA-TMPL-after-action-report-template.md  002-RA-ANLY-canonical-ruleset.md  003-PP-PROD-business-case.md  003-RA-REPT-standards-discrepancy.md  004-PP-PROD-prd.md  005-AT-ARCH-architecture.md  007-TQ-SECU-threat-model.md  008-PM-STAT-status.md  008-TQ-QAPL-test-plan.md  009-DR-GUID-validation-and-ci.md  011-AA-AACR-week-1-scaffold.md  013-RA-DATA-skills-schema-summary.json  014-RA-DATA-plugins-schema-summary.json  015-AA-AACR-standards-enforcement.md  (+2 more)
plugins/lumera-agent-memory/: .mcp.json  ARCHITECTURE.md  CHANGELOG.md  PROJECT.md  README.md  pyproject.toml
plugins/lumera-agent-memory/.claude-plugin/: plugin.json
plugins/lumera-agent-memory/scripts/: dev_setup.sh  requirements.txt  run_smoke.sh  validate_standards.py
plugins/lumera-agent-memory/src/: __init__.py  mcp_server.py
plugins/lumera-agent-memory/src/adapters/: __init__.py  cass_memory_system.py  fixtures.py
plugins/lumera-agent-memory/src/cascade/: __init__.py  interface.py  mock_fs.py
plugins/lumera-agent-memory/src/enrich/: __init__.py  memory_card.py
plugins/lumera-agent-memory/src/index/: __init__.py  index.py  schema.sql
plugins/lumera-agent-memory/src/security/: __init__.py  encrypt.py  redact.py
plugins/lumera-agent-memory/tests/: conftest.py  smoke_test_90s.py  test_cascade_mock.py  test_encryption.py  test_index.py  test_privacy_first.py  test_redaction.py
