[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumera-agent-memory"
version = "0.1.0"
description = "Hybrid local-search + Cascade-storage memory system for coding agents"
authors = [
    {name = "Jeremy Longshore", email = "jeremy@intentsolutions.io"}
]
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41.0.0",
    "mcp>=0.9.0",
]
license = {text = "MIT"}
keywords = ["memory", "cascade", "cass", "agent", "encryption"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-timeout>=2.1.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.setuptools]
package-dir = {"" = "."}
packages = ["src", "src.security", "src.cascade", "src.index", "src.adapters", "src.enrich"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
